# board-server

./: .env.template  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  server.py
app/api/: category.py  posts.py  stuff.py  user.py
app/middlewares/: __init__.py
app/models/: base.py  category.py  posts.py  user.py
app/schemas/: category.py  posts.py  user.py
app/services/: auth.py  category.py
app/utils/: constants.py  logging.py
tests/api/: test_auth.py
