[tool.poetry]
name = "board-server"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
pyjwt = "^2.8.0"
httptools = "^0.6.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
